--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "devDependencies": {
     "@sanity/cli": "^2.0.0",
     "lerna": "^3.14.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1",
+    "rss-parser": "^3.11.0",
+    "rxjs": "^6.6.3"
   }
 }
