--- a/studio/package.json
+++ b/studio/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.0"
   }
 }
