--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-replace": "^2.2.0",
     "@sanity/block-content-to-hyperscript": "^2.0.10",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "rollup": "^2.2.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.1.1",
