--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -18,12 +18,16 @@
     "url": "git+https://github.com/adsanderson/sanity-sapper-blog.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "uvu -r esm __tests__",
+    "test:watch": "watchlist lib __tests__ -- npm test"
   },
   "bugs": {
     "url": "https://github.com/adsanderson/sanity-sapper-blog/issues"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "esm": "^3.2.25",
+    "prettier": "^2.2.1",
+    "uvu": "^0.5.1",
+    "watchlist": "^0.2.3"
   }
 }
