--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,7 @@
     "compression": "^1.7.4",
     "groq": "^0.147.0",
     "polka": "^1.0.0-next.11",
-    "sirv": "^0.4.2",
-    "utilities": "^0.0.0"
+    "sirv": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -34,7 +33,6 @@
     "@rollup/plugin-replace": "^2.2.0",
     "@sanity/block-content-to-hyperscript": "^2.0.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
     "rollup": "^2.2.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.1.1",
