--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "graphql-deploy": "lerna run graphql-deploy",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lerna": "lerna"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@sanity/cli": "^2.0.0",
