--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "test:unit": "uvu -r esm src/utilities/__tests__"
   },
   "dependencies": {
     "@sanity/client": "^2.1.0",
@@ -32,6 +33,7 @@
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.2.0",
     "@sanity/block-content-to-hyperscript": "^2.0.10",
+    "esm": "^3.2.25",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.2.0",
     "rollup-plugin-babel": "^4.0.2",
@@ -39,6 +41,7 @@
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.11",
     "svelte": "^3.20.1",
-    "svelte-loader": "^2.13.6"
+    "svelte-loader": "^2.13.6",
+    "uvu": "^0.5.1"
   }
 }
